unpackaged/main/default/objects/Customer_Contract__c/Customer_Contract__c.object-meta.xml
<CustomObject>
    <label>Customer Contract</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Customer Contract</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>