unpackaged/main/default/objects/Customer_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Contract for customer contract</description>
    <inlineHelpText>Contract for customer contract</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Customer Contracts</relationshipLabel>
    <relationshipName>Customer_Contracts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>