unpackaged/main/default/objects/Customer_Contract__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Used in reporting</description>
    <formula>Contract__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>