unpackaged/main/default/objects/Customer_Contract__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <description>Used in reporting</description>
    <formula>Contract__r.Contract_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>