unpackaged/main/default/objects/Customer_Contract__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <formula>Contract__r.Name</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>