unpackaged/main/default/objects/Customer_Contract__c/fields/Contract_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reviewer__c</fullName>
    <description>used in reporting</description>
    <formula>Contract__r.Reviewer__r.FirstName + &quot; &quot; +  Contract__r.Reviewer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Reviewer</label>
    <type>Text</type>
</CustomField>