unpackaged/main/default/objects/Customer_Contract__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>text(Contract__r.Status__c )</formula>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>