unpackaged/main/default/objects/Customer_Contract__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Customer this customer contract is related to. Ref #CCRM-145</description>
    <inlineHelpText>Customer this customer contract is related to</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Contracts</relationshipLabel>
    <relationshipName>Customer_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>