unpackaged/main/default/objects/Customer_Contract__c/fields/Customer_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Customer Contract ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>