unpackaged/main/default/objects/Customer_Contract__c/fields/Power_Pass_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Power_Pass_Account_Number__c</fullName>
    <description>Account Power Pass Number</description>
    <formula>Customer__r.Power_Pass_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power Pass Account Number</label>
    <type>Text</type>
</CustomField>